--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,7 @@
         <nav>
             <img src="../img/logo-french.png" alt="Logo de MyFrenchHub">
             <ul class="menu change_color">
-                <li class="item1"><a href="/accueil">Accueil</a>
-                </li>
+                <li class="item1"><a href="/accueil">Accueil</a><li>
                 <li class="item2"><a href="#services">Audit et conseils</a>
                     <ul>
                         <li class="subitem1"><a href="/services/Formation1">&#187; Politique de mobilité et besoins</a></li>
@@ -40,12 +39,7 @@
                         <li class="subitem5"><a href="/mobilite/famille">&#187; Famille</a></li>
                     </ul>
                 </li>
-                <li class="item4"><a href="#community">Hub</a>
-                    <ul>
-                        <li class="subitem1"><a href="#">&#187; Experts</a></li>
-                        <li class="subitem2"><a href="#">&#187; Communauté</a></li>
-                    </ul>
-                </li>
+                <li class="item4"><a href="#community">Hub</a></li>
             </ul>
 
         </nav>
