--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body { font-family: verdana, sans-serif;}
 .container { position: relative; left: 0; overflow-x: hidden; font-size: 12px; color: #7d7d7d;}
 header, section, footer { position: relative; width: 100%; min-height: 100%;}
 section, footer { padding: 50px;}
-header { background: url(../img/fond-home.jpg) no-repeat center fixed; background-size: cover; -webkit-background-size: cover;}
+header, #home { background: url(../img/fond-home.jpg) no-repeat center fixed; background-size: cover; -webkit-background-size: cover;}
 h1, h2, h3, h4, h5, h6 { font-family: 'y2k_neophyteregular', verdana, sans-serif; text-transform: uppercase;}
 h1 { font-size: 2em;}
 h2 { font-size: 1em;}
@@ -70,11 +70,31 @@ nav img { display: block; margin: 0 auto;}
 #login_content input[type=submit] { margin: 15px auto 0; padding: 10px; border:none; border-radius: 50% 50% 0px 0px; background-color: #f1696b; color: #fff; text-align: center; cursor: pointer; transition: all 500ms;}
 #login_content input[type=submit]:hover { color: #32373D;}
 
+/* HOME */
+#home, #home a { color: #484549;}
+#home > div { width: 100%;}
+.home_top p, .home_bottom p, #home a { font-weight: bold; text-transform: uppercase; text-align: center;}
+.home_top p { display: inline-block; vertical-align: top; width: 25%; padding-top: 25px; background: url(../img/picto/mini-fleche-blanche.png) no-repeat 50% 0; font-size: 1.2em;}
+.home_middle, .home_middle img { margin: 50px auto 50px;}
+.home_middle img { display: block;}
+.home_middle h1 { text-align: center;}
+.home_middle h1 strong { color: #f1696b;}
+.home_bottom div { display: inline-block; vertical-align: top;}
+.home_bottom div p { color: #fff;}
+.home_bottom div div { width: 300px; height: 150px; border-radius: 15px;}
+.home_bottom div div a { display: block; width: 100%; height: 100%; line-height: 150px; font-size: 2em;}
+.home_bottom div:nth-child(1) div { background-color: #fff; transition: all 500ms;}
+.home_bottom div:nth-child(1) div:hover { background-color: rgba(255,255,255,0.5);}
+.home_bottom div:nth-child(1) a span { vertical-align: middle; display:inline-block; line-height:normal;}
+.home_bottom div + div { float: right;}
+.home_bottom div:nth-child(2) div { border: 3px solid #fff; transition: all 500ms;}
+.home_bottom div:nth-child(2) div:hover { background-color: rgba(255,255,255,0.5);}
+
 /* bubble */
 .sign_up, .services, .mobility, .community { display: block; position: absolute; text-align: center; text-decoration: none; font-size: 1.2em; color: #686560; text-transform: uppercase; transition: all 500ms;}
 .services, .mobility, .community { top: 60%; width: 200px; height: 200px; line-height: 200px; border-radius: 50%; background-color: rgba(255,255,255,0.5);}
 .services:hover, .mobility:hover, .community:hover { background-color: rgba(255,255,255,1);}
-.sign_up span, .services span, .mobility span, .community span { vertical-align:bottom; display:inline-block; line-height:normal;}
+.sign_up span, .services span, .mobility span, .community span { vertical-align: bottom; display:inline-block; line-height:normal;}
 .services span, .mobility span, .community span { padding-bottom: 50px;}
 .sign_up { top: 9%; left: 11%; width: 276px; height: 275px; background: url(../img/logo-french-bulle.png) no-repeat; line-height: 200px;
 }
@@ -102,7 +122,7 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 #mobility h2 { color: #c5bca3;}
 #services { background-color: #c5bca3;}
 
-/* HOME */
+/* PRESENTATION */
 #services > div, #mobility > div, #community > div, #services ul, #mobility ul { display: inline-block; vertical-align: middle; max-height: 100%; padding: 50px;}
 #services > div, #mobility > div, #community > div { width: 40%; height: 100%;}
 #services h1, #mobility h1, #community h1, #services li, #mobility li { margin-bottom: 50px;}
