--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -91,7 +91,7 @@
                     <label for="nom">Nom*</label> 
                 </td><!--
              --><td>
-                    <input type="text" name="nom" id="nom" required >
+                    <input type="text" name="contactNom" id="nom" required >
                 </td>
             </tr>
             <tr>
@@ -99,7 +99,7 @@
                     <label for="prenom">Prénom*</label>
                 </td><!--
              --><td>
-                    <input type="text" name="prenom" id="prenom" >
+                    <input type="text" name="contactPrenom" id="prenom" >
                 </td>
             </tr>
             <tr>
