--- a/templates/Detail/recontacter.html.twig
+++ b/templates/Detail/recontacter.html.twig
@@ -13,7 +13,7 @@
     {% endif %}
     
  <section class="milieu" >
-     <h1>Etre recontacter</h1><br>
+     <h1>Etre recontacté</h1><br>
             <form method='post' action='/contact'>
                     <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
                     <label for="contact">Contact principal</label> :   <input type="text" name="contact" required>   <br>
