--- a/templates/entreprise.html.twig
+++ b/templates/entreprise.html.twig
@@ -23,12 +23,12 @@
     <form>
         {% for item in donnee %}
         <h1><a href="/accueil" class="return"><</a>Espace <strong>{{item.name|upper}}</strong></h1><br />
-        <h2 class="underline">Retrouver et mettez à jour toutes vos informations personnelles</h2>
+        <h2 class="underline">Retrouver  toutes vos informations personnelles</h2>
         <h3>Renseignements</h3>
             <table class="left">
                 <tr>
                     <td>
-                        <label for='societe'>Nom entreprise*</label>
+                        <label for='societe'>Nom entreprise</label>
                     </td><!--
                  --><td>
                         <input type='text' name='societe'  value="{{item.name}}"  class="form-control"  readonly="readonly"
@@ -36,15 +36,15 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="activite">Domaine d'activitée*</label>
+                        <label for="activite">Domaine d'activitée</label>
                     </td><!--
                  --><td>
                         <input type="text"  name="activite"  value="{{item.activity}}"class="form-control" readonly="readonly">
                     </td>
                 </tr>
-                <tr>
+                <tr
                     <td>
-                        <label for="adress">Adresse*</label> 
+                        <label for="adress">Adresse</label> 
                     </td><!--
                  --><td>
                         <input type="text" name="adress" value="{{item.adress}}" class="form-control" readonly="readonly" >
@@ -52,7 +52,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="codepostal">Code postal*</label> 
+                        <label for="codepostal">Code postal</label> 
                     </td><!--
                  --><td>
                         <input type="text" name="cp" value="{{item.cp}}" class="form-control" readonly="readonly">
@@ -60,7 +60,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="ville">Ville*</label> 
+                        <label for="ville">Ville</label> 
                     </td><!--
                  --><td>
                         <input type="text"  name="ville" value="{{item.Ville}}"  class="form-control" readonly="readonly">
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="pays">Pays*</label> 
+                        <label for="pays">Pays</label> 
                     </td><!--
                  --><td>
                         <input type="text"  name="pays" value="{{item.Pays}}"  class="form-control" readonly="readonly">
@@ -76,7 +76,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="siren">Siren*</label> 
+                        <label for="siren">Siren</label> 
                     </td><!--
                  --><td>
                         <input type="text" name="siren" value="{{item.siren}}" class="form-control" readonly="readonly" >
@@ -90,17 +90,17 @@
                 </td><!--
              --><td>
                     {%  if(item.civilite==0) %}
-                        <label for="opt2">Mme</label> <input required type="radio" name="opt" id="opt2" readonly="readonly"/>
+                        <label for="opt2">Mme</label> <input required type="radio" name="opt" id="opt2" disabled/>
                         <label for="opt1">Mr</label><input required type="radio" name="opt" id="opt1" readonly="readonly" checked />
                     {% else %}
                         <label for="opt2">Mme</label> <input required type="radio" name="opt" id="opt2"  readonly="readonly"checked />
-                        <label for="opt1">Mr</label><input required type="radio" name="opt" id="opt1" readonly="readonly"/>
+                        <label for="opt1">Mr</label><input required type="radio" name="opt" id="opt1" disabled/>
                    {% endif %}
                 </td>
             </tr>
             <tr>
                 <td>
-                    <label for="nom">Nom*</label> 
+                    <label for="nom">Nom</label> 
                 </td><!--
              --><td>
                     <input type="text" name="contactNom"  value="{{item.contactNom}}" readonly="readonly" >
@@ -108,7 +108,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="prenom">Prénom*</label>
+                    <label for="prenom">Prénom</label>
                 </td><!--
              --><td>
                     <input type="text" name="contactPrenom"  value="{{item.contactPrenom}}" readonly="readonly">
@@ -116,7 +116,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="fonction">Fonction*</label>
+                    <label for="fonction">Fonction</label>
                 </td><!--
              --><td>
                     <input type="text" name="fonction"  value="{{item.fonction}}"  readonly="readonly">
@@ -124,7 +124,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="email">Email*</label>
+                    <label for="email">Email</label>
                 </td><!--
              --><td>
                     <input type="email" name="email"  value="{{item.emailContact}}"  readonly="readonly">
@@ -132,7 +132,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="Tel">Tel*</label>
+                    <label for="Tel">Tel</label>
                 </td><!--
              --><td>
                     <input type="tel" name="tel"   value="{{item.tel}}" readonly="readonly">
@@ -140,32 +140,32 @@
             </tr>
             <tr>
                 <td>
-                    <label for="salarier">Nombres de salariés*</label> 
+                    <label for="salarier">Nombres de salariés</label> 
                 </td><!--
              --><td>
                     <select name="salarier" id="salarier">
                         {%  if(item.NbreSalarier==1) %}
                             <option value="1" selected >1 à 49</option> 
-                            <option value="2" >50 à 249</option> 
-                            <option value="3">250 à 1000</option> 
-                            <option value="4">plus de 1000</option>
+                            <option value="2" disabled>50 à 249</option> 
+                            <option value="3"disabled>250 à 1000</option> 
+                            <option value="4" disabled>plus de 1000</option>
                         {% endif %}
                         {%  if(item.NbreSalarier==2) %}
-                            <option value="1" >1 à 49</option> 
+                            <option value="1" disabled>1 à 49</option> 
                             <option value="2" selected >50 à 249</option> 
-                            <option value="3">250 à 1000</option> 
-                            <option value="4">plus de 1000</option>
+                            <option value="3" disabled>250 à 1000</option> 
+                            <option value="4" disabled>plus de 1000</option>
                         {% endif %}
                         {%  if(item.NbreSalarier==3) %}
-                            <option value="1" >1 à 49</option> 
-                            <option value="2" >50 à 249</option> 
+                            <option value="1" disabled>1 à 49</option> 
+                            <option value="2" disabled>50 à 249</option> 
                             <option value="3" selected  >250 à 1000</option> 
-                            <option value="4">plus de 1000</option>
+                            <option value="4" disabled>plus de 1000</option>
                         {% endif %}
                         {%  if(item.NbreSalarier==4) %}
-                            <option value="1" >1 à 49</option> 
-                            <option value="2" >50 à 249</option> 
-                            <option value="3" >250 à 1000</option> 
+                            <option value="1" disabled>1 à 49</option> 
+                            <option value="2" disabled>50 à 249</option> 
+                            <option value="3" disabled>250 à 1000</option> 
                             <option value="4" selected  >plus de 1000</option>
                         {% endif %}
                     </select>
@@ -175,16 +175,18 @@
         </form>
         </table>
         <h2 class="underline">Gestion des salarié</h2>
-            <table class="left listing">
+            <table class="left listing" >
+           
                 <thead>
-                    <tr >
-                        <th>Liste des salariés</th>
-                    </tr>
+                    <tr><th>Liste des salariés</th></tr>
+            {#        <tr >
+                        <th>Nom</th><th>Prenom</th><th>E mail</th><th>Fonction</th>
+                    </tr>#}
                 </thead>
                 <tbody>
                     {% for Sal in listeSal %}
                         <tr>
-                            <td>{{Sal.name}} {{Sal.firstname}} - {{Sal.email}} - {{Sal.fonction}}</td>
+                            <td>{{Sal.name}}  --  {{Sal.firstname}}  --  {{Sal.email}} ---  {{Sal.fonction}}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -199,7 +201,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="Nom">Nom*</label>
+                            <label for="Nom">Nom</label>
                         </td><!--
                      --><td>
                             <input type="text" name="Nom" >
@@ -207,7 +209,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="Prenom">Prenom*</label>
+                            <label for="Prenom">Prenom</label>
                         </td><!--
                      --><td>
                             <input type="text" name="Prenom" >
@@ -215,7 +217,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="fonction">Fonction*</label>
+                            <label for="fonction">Fonction</label>
                         </td><!--
                      --><td>
                             <input type="text" name="fonction" >
@@ -223,7 +225,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="email">Email*</label>
+                            <label for="email">Email</label>
                         </td><!--
                      --><td>
                             <input type="email" name="email" >
