--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -75,8 +75,9 @@
                     </tr>
                 </table>
         </div>
+        <a href="#part_2" class="scroll_down">scroll</a>
     </section>
-    <section class="form form_content standard register">
+    <section class="form form_content standard register" id="part_2">
         <h1>Je crée mon compte</h1>
         <table class="left">
             <tr>
