--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -259,4 +259,11 @@
     </form>
 </section>                       
  
- {% endblock %}
+{% endblock %}
+
+{% block javascripts %}
+
+    <script type="text/javascript" src="../../js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="../../js/frenchHub.js"></script>
+
+{% endblock %}
