--- a/templates/Detail/recontacter.html.twig
+++ b/templates/Detail/recontacter.html.twig
@@ -15,7 +15,7 @@
         <span class="mess"> {{ message3 }} </span>
     {% endif %}
         <form method='post' action='/contact'>
-            <table class="left milieu">
+            <table class=" middle">
             <tr>
                 <td>
                     <label for='societe'>Dénomination</label>
@@ -76,3 +76,9 @@
                         
 {% endblock%}
                             
+{% block javascripts %}
+
+    <script type="text/javascript" src="../../js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="../../js/frenchHub.js"></script>
+
+{% endblock %}
