--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ nav img { display: block; margin: 0 auto;}
 #header_crossbar { position: absolute; top: 0; right: 0; z-index: 9999; padding: 5px 10px; background: rgba(153,153,153,0.6);}
 #header_crossbar > a, #search, #lang { display: inline-block;}
 #header_crossbar > a { height: 25px; padding: 0 8px; line-height: 25px; text-decoration: none; color: #717070;}
-#search input[name=search] { padding-left: 5px; border: none; border-radius: 20px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
+#search input[name=search] { padding: 3px 5px; border: none; border-radius: 20px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 #search input[type=submit] { width: 22px; height: 17px; border: none; background-color: inherit; background: url(../img/picto/picto-loupe.png) no-repeat; text-indent: -9999px; cursor: pointer;}
 #lang select { border: none; background-color: inherit;}
 #login_content { display: none; z-index: 999;}
@@ -219,11 +219,13 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .form table tbody, .form table tr { display: block; width: 100%;}
 .form table th { margin-bottom: 10px; font-family: 'y2k_neophyteregular', verdana, sans-serif; color: #f1696b;}
 .form table tr td p { text-align: left;}
-.form .left, .form .right { display: inline-block; vertical-align: top; width: 50%; margin: 20px 0;}
+.form .left, .form .right { display: inline-block; vertical-align: top;}
+.form .left, .form .right, .form .middle { width: 50%; margin: 20px 0;}
 .form .left { padding: 20px 20px 20px 0;}
+.form .middle { margin: 0 auto; padding: 20px;}
 .form .right { padding: 20px 0 20px 20px;}
-.form .left table, .form .right table { width: 100%;}
-.form .left td, .form .right td { display: inline-block; width: 50%; margin: 10px 0;}
+.form .left table, .form .right table, .form .middle table { width: 100%;}
+.form .left td, .form .right td, .form .middle td { display: inline-block; width: 50%; margin: 10px 0;}
 .form_content .underline { position: relative; margin: 40px 0;}
 .form_content .underline:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
 .form .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
@@ -241,4 +243,3 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .siren { visibility:hidden;}
 .sirenFr { visibility: visible;}
 .mess { display: block; width:80%; margin: auto; padding:1%; background-color: rgba(197,188,163,0.8); font-size: 16px; text-align: center;}
-.milieu { margin: 0 auto;}
