--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -146,7 +146,7 @@
             <div id="part_1">
                 <table>
                     <tr>
-                        <th>Assistance<br />départ / Arrivée</th>
+                        <th>Assistance départ / Arrivée</th>
                     </tr>
                     <tr>
                         <td>
@@ -217,8 +217,8 @@
                         <td>
                             <input type="checkbox" name="option9" id="banque" value="9">
                             <label for="banque">Banque/Assurance</label>
-                        </td>
-                        <td>
+                        </td><!--
+                     --><td>
                             <input type="checkbox" name="option10" id="permis" value="10" >
                             <label for="permis">Permis de conduire/véhicule</label>
                         </td>
@@ -227,8 +227,8 @@
                         <td>
                             <input type="checkbox" name="option11" id="protection" value="11">
                             <label for="protection">Protection sociale</label>
-                        </td>
-                        <td>
+                        </td><!--
+                     --><td>
                             <input type="checkbox" name="option12" id="fiscales" value="12">
                             <label for="fiscales">Problématiques fiscales</label>
                         </td>
