--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,6 +205,7 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 #quotation #part_1 table { width: 33.33%;}
 #quotation #part_1 table:nth-child(2) { border-left: 1px solid #eee; border-right: 1px solid #eee;}
 #quotation #part_2 table:nth-child(1) { width: 66.66%; border-right: 1px solid #eee;}
+#quotation #part_2 table:nth-child(1) td { width: 50%;}
 #quotation #part_2 table:nth-child(2) { width: 33.33%;}
 #quotation input[type="submit"] { bottom: 70px;}
 
@@ -217,7 +218,7 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 /* FORM */
 .form p, .form h3 { text-align: center;}
 .form table tbody, .form table tr { display: block; width: 100%;}
-.form table th { margin-bottom: 10px; font-family: 'y2k_neophyteregular', verdana, sans-serif; color: #f1696b;}
+.form table th { display: block; margin-bottom: 10px; font-family: 'y2k_neophyteregular', verdana, sans-serif; color: #f1696b;}
 .form table tr td p { text-align: left;}
 .form .left, .form .right { display: inline-block; vertical-align: top;}
 .form .left, .form .right, .form .middle { width: 50%; margin: 20px 0;}
