--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-	<section id="home" class="content" data-id="active_content">
+	<section id="home" class="content">
         <div class="home_top">
             <p>Attirer<br />les talents</p><!--
          --><p>S'ouvrir à<br />l'internationale</p><!--
