--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,12 +85,10 @@ nav img { display: block; margin: 0 auto;}
 .home_bottom div p { color: #fff;}
 .home_bottom div div { width: 300px; height: 150px; border-radius: 15px;}
 .home_bottom div div a { display: block; width: 100%; height: 100%; line-height: 150px; font-size: 2em;}
-.home_bottom div:nth-child(1) div { background-color: #fff; -webkit-transition: all 500ms; -moz-transition: all 500ms; transition: all 500ms}
-.home_bottom div:nth-child(1) div:hover { background-color: rgba(255,255,255,0.5);}
+.home_bottom div:nth-child(1) div, .home_bottom div:nth-child(2) div { border: 3px solid #fff; -webkit-transition: all 500ms; -moz-transition: all 500ms; transition: all 500ms}
+.home_bottom div:nth-child(1) div:hover, .home_bottom div:nth-child(2) div:hover { background-color: rgba(255,255,255,1);}
 .home_bottom div:nth-child(1) a span { vertical-align: middle; display:inline-block; line-height:normal;}
 .home_bottom div + div { float: right;}
-.home_bottom div:nth-child(2) div { border: 3px solid #fff; -webkit-transition: all 500ms; -moz-transition: all 500ms; transition: all 500ms}
-.home_bottom div:nth-child(2) div:hover { background-color: rgba(255,255,255,0.5);}
 
 /* bubble */
 .sign_up, .services, .mobility, .community { display: block; position: absolute; text-align: center; text-decoration: none; font-size: 1.2em; color: #686560; text-transform: uppercase; -webkit-transition: all 500ms; -moz-transition: all 500ms; transition: all 500ms}
