suppression lien particulier

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -23,7 +23,7 @@
          --><div>
             	<p>Vous êtes une</p>
             	<div>
-            		<a href="/accueil">Particulier</a>
+            		<a href="#">Particulier</a>
             	</div>
             </div>
         </div>
