--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,7 @@ nav img { display: block; margin: 0 auto;}
 #header_crossbar { position: absolute; top: 0; right: 0; z-index: 9999; padding: 5px 10px; background: rgba(153,153,153,0.6);}
 #header_crossbar > a, #search, #lang { display: inline-block;}
 #header_crossbar > a { height: 25px; padding: 0 8px; line-height: 25px; text-decoration: none; color: #717070;}
-#search input[name=search] { padding: 3px 5px; border: none; border-radius: 20px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
+#search input[name=search] { padding: 3px 5px; border: none; border-radius: 20px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; -moz-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 #search input[type=submit] { width: 22px; height: 17px; border: none; background-color: inherit; background: url(../img/picto/picto-loupe.png) no-repeat; text-indent: -9999px; cursor: pointer;}
 #lang select { border: none; background-color: inherit;}
 #login_content { display: none; z-index: 999;}
@@ -229,10 +229,10 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .form_content .underline:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
 .form .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
 .form .full { width: 100%; padding: 20px;}
-.form input[type="submit"] { position: absolute; bottom: 20px; right: 20px;; padding: 10px 50px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer; -webkit-transition: all 1s; -moz-transition: all 1s; transition: all 1s}
+.form input[type="submit"] { position: absolute; bottom: 20px; right: 20px;; padding: 10px 50px; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer; -webkit-transition: all 1s; -moz-transition: all 1s; transition: all 1s}
 .form input[type="submit"]:hover { background-color: #7d7d7d;}
 .form input[type="text"], .form input[type="email"], .form input[type="tel"] { width: 80%;}
-.form input, .form textarea { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
+.form input, .form textarea { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; -moz-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 .form select, .form textarea[id="description"] { max-width: 80%;}
 .form label[for="description"] { display: block; margin-bottom: 10px;}
 .form textarea[id="description"] { min-height: 100px; border-radius: 20px;}
