verif otion form inscription

--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -37,7 +37,7 @@
                             199€ / an
                         </td><!--
                      --><td>
-                            <input type="checkbox" name="option" id="option1" value="1" checked />
+                            <input type="checkbox" name="option" id="option1" value="1" />
                         </td>
                     </tr>
                     <tr>
