dernier reglage form

--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -69,10 +69,10 @@
             </tr>
             <tr>
                 <td>
-                    <label for="siren">Siren*</label> 
+                    <label for="siren" class="siren" id="sirenLabel">Siren*</label> 
                 </td><!--
              --><td>
-                    <input type="text" name="siren" id="siren">
+                    <input type="text" name="siren" class="siren"  id="sirenInput">
                 </td>
             </tr>
         </table><!--
@@ -82,7 +82,7 @@
                     <p>Civilité*</p>
                 </td><!--
              --><td>
-                    <input type="radio" name="civilite" id="titre2" value="1"/><label for="titre2">Mme</label>
+                    <input type="radio" name="civilite" id="titre2" required value="1"/><label for="titre2">Mme</label>
                     <input type="radio" name="civilite" id="titre1" value="0"/><label for="titre1">Mr</label>
                 </td>
             </tr>
