--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
             <img src="../img/logo-french.png" alt="Logo de MyFrenchHub">
             <ul class="menu change_color">
                 <li class="item1"><a href="/accueil">Accueil</a><li>
-                <li class="item2"><a href="#services">Audit et conseils</a>
+                <li class="item2"><a href="#services">Audit et conseil</a>
                     <ul>
                         <li class="subitem1"><a href="/services/Formation1">&#187; Politique de mobilité et besoins</a></li>
                         <li class="subitem2"><a href="/services/Formation2">&#187; Assistance intégration</a></li>
@@ -32,7 +32,7 @@
                 </li>
                 <li class="item3"><a href="#mobility">Mobilité internationale</a>
                     <ul>
-                        <li class="subitem1"><a href="/mobilite/assistance">&#187; Assistance Départ et Arrivé</a></li>
+                        <li class="subitem1"><a href="/mobilite/assistance">&#187; Assistance Départ et Arrivée</a></li>
                         <li class="subitem2"><a href="/mobilite/logement">&#187; Logement</a></li>
                         <li class="subitem3"><a href="/mobilite/administration">&#187; Administration</a></li>
                         <li class="subitem4"><a href="/mobilite/immigration">&#187; Immigration</a></li>
