--- a/templates/entreprise.html.twig
+++ b/templates/entreprise.html.twig
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="activite">Domaine d'activitée</label>
+                        <label for="activite">Domaine d'activité</label>
                     </td><!--
                  --><td>
                         <input type="text"  name="activite"  value="{{item.activity}}"class="form-control" readonly="readonly">
@@ -174,7 +174,7 @@
             {% endfor %}   
         </form>
         </table>
-        <h2 class="underline">Gestion des salarié</h2>
+        <h2 class="underline">Gestion des salariés</h2>
             <table class="left listing" >
            
                 <thead>
@@ -209,7 +209,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="Prenom">Prenom</label>
+                            <label for="Prenom">Prénom</label>
                         </td><!--
                      --><td>
                             <input type="text" name="Prenom" >
