--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,8 +6,8 @@
         <div id="menu">        
             <!-- bubble navigation --> 
             <a href="/sinscrire" class="sign_up"><span>Devenez<br /><strong>membre</strong></span></a>
-            <a href="#services" class="services"><span>Audit<br />et conseils</span></a>
-            <a href="#mobility" class="mobility"><span>Services<br />de mobilités</span></a>
+            <a href="#services" class="services"><span>Audit<br />et conseil</span></a>
+            <a href="#mobility" class="mobility"><span>Services<br />de mobilité</span></a>
             <a href="#community" class="community"><span>My French<br />cl'hub</span></a>
 
             <!-- teaser sentence -->
