--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -89,7 +89,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="activite">Domaine d'activitée*</label>
+                    <label for="activite">Domaine d'activité*</label>
                 </td><!--
              --><td>
                     <input type='text' name='activite' id="activite" value ="{{data['activite']}}">
